<package format="2">
  <name>imu_sensor_controller</name>
  <version>0.17.1</version>
  <description>Controller to publish state of IMU sensors</description>
  <maintainer email="bence.magyar.robotics@gmail.com">Bence Magyar</maintainer>
  <maintainer email="mathias.luedtke@ipa.fraunhofer.de">Mathias Lüdtke</maintainer>
  <maintainer email="enrique.fernandez.perdomo@gmail.com">Enrique Fernandez</maintainer>

  <license>BSD</license>

  <url type="website">https://github.com/ros-controls/ros_controllers/wiki</url>
  <url type="bugtracker">https://github.com/ros-controls/ros_controllers/issues</url>
  <url type="repository">https://github.com/ros-controls/ros_controllers</url>

  <author>Adolfo Rodriguez Tsouroukdissian</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>realtime_tools</depend> 
  <depend>roscpp</depend> 
  <depend>hardware_interface</depend> 
  <depend>pluginlib</depend> 
  <depend>controller_interface</depend> 
  <depend>sensor_msgs</depend> 

  <export>
    <controller_interface plugin="${prefix}/imu_sensor_plugin.xml"/>
  </export>
</package>
