<package format="2">
  <name>joint_state_controller</name>
  <version>0.11.1</version>
  <description>Controller to publish joint state</description>
  <maintainer email="adolfo.rodriguez@pal-robotics.com">Adolfo Rodriguez Tsouroukdissian</maintainer>

  <license>BSD</license>

  <url type="website">https://github.com/ros-controls/ros_controllers/wiki</url>
  <url type="bugtracker">https://github.com/ros-controls/ros_controllers/issues</url>
  <url type="repository">https://github.com/ros-controls/ros_controllers</url>

  <author>Wim Meeussen</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>controller_interface</depend>
  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>sensor_msgs</depend>
  <depend>realtime_tools</depend>
  <depend>roscpp</depend>

  <test_depend>rostest</test_depend>

  <export>
    <controller_interface plugin="${prefix}/joint_state_plugin.xml"/>
  </export>
</package>
