<package format="2">
  <name>position_controllers</name>
  <version>0.13.4</version>
  <description>position_controllers</description>

  <maintainer email="adolfo.rodriguez@pal-robotics.com">Adolfo Rodriguez Tsouroukdissian</maintainer>
  <maintainer email="bence.magyar.robotics@gmail.com">Bence Magyar</maintainer>
  <maintainer email="davetcoleman@gmail.com">Dave Coleman</maintainer>
  <maintainer email="enrique.fernandez.perdomo@gmail.com">Enrique Fernandez</maintainer>

  <license>BSD</license>

  <url type="website">https://github.com/ros-controls/ros_controllers/wiki</url>
  <url type="bugtracker">https://github.com/ros-controls/ros_controllers/issues</url>
  <url type="repository">https://github.com/ros-controls/ros_controllers</url>

  <author>Vijay Pradeep</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>controller_interface</depend> 
  <depend>forward_command_controller</depend> 

  <export>
    <controller_interface plugin="${prefix}/position_controllers_plugins.xml"/>
  </export>
</package>
