<package format="2">
  <name>position_controllers</name>
  <version>0.17.0</version>
  <description>position_controllers</description>

  <maintainer email="bence.magyar.robotics@gmail.com">Bence Magyar</maintainer>
  <maintainer email="mathias.luedtke@ipa.fraunhofer.de">Mathias Lüdtke</maintainer>
  <maintainer email="enrique.fernandez.perdomo@gmail.com">Enrique Fernandez</maintainer>

  <license>BSD</license>

  <url type="website">https://github.com/ros-controls/ros_controllers/wiki</url>
  <url type="bugtracker">https://github.com/ros-controls/ros_controllers/issues</url>
  <url type="repository">https://github.com/ros-controls/ros_controllers</url>

  <author>Vijay Pradeep</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>controller_interface</depend> 
  <depend>forward_command_controller</depend> 
  <depend>pluginlib</depend>

  <export>
    <controller_interface plugin="${prefix}/position_controllers_plugins.xml"/>
  </export>
</package>
